# mcts

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bash  requirements.bash
.github/workflows/: cmake-single-platform.yml
experiment/: CMakeLists.txt
include/: generic_mcts.hpp  mcts.hpp  mcts_defs.hpp
scripts/: README.md  build_project.sh  requirements.sh  valgrind_tests.sh  variables.sh
src/: mcts_defs.cpp  node.hpp
tests/: CMakeLists.txt  mcts_defs_tests.cpp  test_utils.hpp  valgrind.bash
tests/unit_tests/: generic_mcts_tests.cpp  mcts_defs_tests.cpp  test_utils_tests.cpp
